# ybigta-agent

./: README.md  docker-compose.yml  seed_users.sql
app/agents/database_agent/: README.md  agent.py  main.py  prompts.py  requirements.txt  task_manager.py
app/agents/database_agent/agent/: __main__.py  agent.py  prompts.py  requirements.txt  task_manager.py  tools.py
app/agents/database_agent/core/: config.py  database.py  models.py
app/agents/database_agent/database/: config.py  database.py  main.py
app/agents/database_agent/routes/: query_router.py  router.py
app/agents/excel_agent/: README.md  __init__.py  graph.py  local_test.py  minimal_excel_test.py  minimal_test.py  pure_local_test.py  simple_test.py  test_excel_agent.py  tools.py  tools_test.py
app/agents/excel_agent/mappings/: 가.yml  나.yml  다.yml  (+2 more)
app/agents/mail_agent/mcp-email-client/: .gitignore  mailing.py  pyproject.toml  run_mcp_server.py
app/agents/mail_agent/mcp-email-client/src/mcp_email_client/: __init__.py  __main__.py  config.py  db.py  mailhandler.py  semantic.py  server.py
app/agents/mail_agent/mcp-email-client/src/mcp_email_client/config/: default.json
app/agents/mail_agent/mcp-email-client/tests/: test_db.py  test_mail.py  test_mcp_server.py  test_semantic.py
app/agents/report_agent/: .gitignore  README.md  agent.py  prompt.py
app/common/: types.py
app/common/client/: card_resolver.py  client.py
app/common/server/: server.py  task_manager.py  utils.py
app/common/utils/: in_memory_cache.py  push_notification_auth.py
docker/: database.Dockerfile  db_agent.Dockerfile
(+8 files in other folders)
