[project]
name = "mcp-email-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "duckdb>=1.2.2",
    "imapclient>=3.0.1",
    "mcp[cli]>=1.3.0",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
mcp_email_client = "mcp_email_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
